--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -2,6 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12564953.md#1" target="_blank">美议员提新法案 禁投资黑名单上中国企业</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12564953.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-115-1-320x200.jpg" align ="left"></a>美国方面进一步关紧了中共在美国获得资助的大门。在川普（特朗普）总统此前针对美国投资中国公司问题发布总统令之后，国会议员又制定了新的法案，进一步扩大了美国资金投资.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 11:30 AM					</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12564665.md#1" target="_blank">“打倒中共恶魔”联署加速 一个月增10万</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12564665.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/145159-150x120.png" align ="left"></a>全球退党服务中心自今年6月份发起有16种语言版本的“打倒中共恶魔”（Eliminate the Demon Chinese Communist Party）倡议书全球征签以来，获得全球各族裔民众广泛响应，不到半年时间，截止到11月19日，全球有超过23万人联署。尤其是进入10月份以来，联署大潮更是汹涌澎湃，人数以加速度迅猛增加，一个月内增加了超过10万个签名.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:33 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/24/n12499541.md#1" target="_blank">【思想领袖】吉尼斯：如何应对中共无声入侵</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/10/24/n12499541.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/download-40-150x120.jpg" align ="left"></a>去年，一名藏族加拿大学生在当选大学学生会主席后，收到了大量的恐吓信、骚扰和死亡威胁。2018年，一位竞选当地公职的官员收到一封信，邀请他代表当地社区访问中国，与一座中国城市建立“友谊”。 这些案件只是中共扩大对外影响行动的冰山一角。本期节目，我们将与加内特·吉尼斯（Garnett Genuis）进行座谈，他是加拿大影子内阁国际发展与人权部部长，也是“对华政策.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:30 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12564900.md#1" target="_blank">麦肯娜尼：为了“宪法程序” 川普不应让步</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/21/n12564900.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-150x120.jpg" align ="left"></a>白宫新闻秘书凯莉?麦肯娜尼（Kayleigh McEnany）周五（11月20日）就2020总统大选结果表示，因为目前尚未解决的法律诉讼挑战，以及大选“宪法程序”仍在进行之中，唐纳德?川普（特朗普）总统不应该作出退让。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:08 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564658.md#1" target="_blank">沈舟：美太空军星链计划应对中共威胁</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564658.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/200928-N-NO204-0001-150x120.jpg" align ="left"></a>11月19日，美国印太司令部透露了美国太空军的星链计划，明确指向了中共的威胁。美军正在部署一个庞大的太空卫星网链（Starlink broadband network），令中共试图破坏美国卫星的做法成为徒劳。
 
 卫星网链项目，由美国私营企业SpaceX公司提出，公司的老板也是特斯拉电动汽车公司的老板，伊隆·马斯克（Elon Musk）。SpaceX公司还.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 9:06 AM							</td></tr>
@@ -36,6 +37,5 @@
 <tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561391.md#1" target="_blank">【重播】川普团队：去除舞弊选票 足以翻转结果</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561391.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229683262-1-150x120.jpg" align ="left"></a>美东时间周四（11月19日）中午12:00，川普（特朗普）法律团队将举行重要新闻发布会。新唐人将进行现场直播（中文同声翻译），敬请收看。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月20日 12:53 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561543.md#1" target="_blank">朱利安尼：28州选票数据被送德国西班牙</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561543.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/download-1-3-150x120.jpg" align ="left"></a>在11月18日的福克斯新闻采访中，川普（特朗普）竞选团队的律师朱利安尼（Rudy Giuliani）做出了令人震惊的指控，他说美国28个州的选票被发送到德国和西班牙，由委内瑞拉的Smartmatic公司进行计数。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月19日 11:36 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561215.md#1" target="_blank">【新闻大家谈】暗助拜登 中共自认颠覆世界</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561215.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/download-34-150x120.jpg" align ="left"></a>欢迎收看11月19日的《新闻大家谈》：美国五角大楼18号对特种部队指挥结构进行罕见改革，是为提升效率，还是清理内鬼？大陆媒体惊现“中国正颠覆世界秩序”的标题，中共葫芦里卖的什么药？全球政治经济精英，借助疫情推动“大重置”计划，是解药还是毒药？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月19日 10:57 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/17/n12556030.md#1" target="_blank">【独家】中共培训东南亚国家警官的背后</a><br></h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/17/n12556030.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1064392574-600x400-150x120.jpg" align ="left"></a>近年来，中共跨境抓捕异议人士的案件频被曝光。大纪元近日获得多份中共内部文件，泄漏中共大规模培训其他国家，尤其是东南亚国家的警官，并籍此与其他国家展开“警务合作”。与此同时，中共跨境抓捕异议人士的案例大幅增加。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月19日 9:53 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yywlhi373/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yywlhi373/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
