--- a/gb/15/2/12/n4364933.md
+++ b/gb/15/2/12/n4364933.md
@@ -1,8 +1,8 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yywlhi373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/yywlhi373/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yywlhi373/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yywlhi373/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yywlhi373/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yywlhi373/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yywlhi373/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>作文选登：登上玉山</h2>
-
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/Fotolia_28184100_Subscription_L-320x200.jpg" />
 <h6></h6>
 <hr>
 <p>这次爸爸公司的登山队安排去登玉山，所以我们全家人决定一起挑战。我们搭了一台小巴士，坐了非常久才到目的地─ ─“东埔山庄”。到达后，我们去看云海，还看到了一只可爱的小猴子。</p>
@@ -16,44 +16,50 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/15/2/12/n4364933.htm">作文选登：登上玉山</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/16/4/15/n7558705.htm">一张椅子的故事 中原用设计助偏乡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/15/4/7/n4405662.htm">坐姿不良  腰酸尾椎痛年轻化</a></li>
-> <li><a href="https://www.epochtimes.com/gb/14/9/22/n4254727.htm">普利茅斯大学烧钱 七把椅子花15万</a></li>
-> <li><a href="https://www.epochtimes.com/gb/14/1/21/n4064830.htm">坐烂椅子出糗 胖老师半年怒减35公斤</a></li>
-> <li><a href="https://www.epochtimes.com/gb/12/9/6/n3676194.htm">外媒：中国返校怪现状 学生自备课桌椅</a></li>
-> <li><a href="https://www.epochtimes.com/gb/12/9/3/n3674390.htm">有钱援外无钱投教育 湖北三千学生自备课桌</a></li>
-> <li><a href="https://www.epochtimes.com/gb/9/10/22/n2697592.htm">会呼吸的椅子 台湾学生夺国际设计大奖</a></li>
-> <li><a href="https://www.epochtimes.com/gb/8/11/11/n2326184.htm">课桌椅与中小学生身高不符 北市将专案更新</a></li>
-> <li><a href="https://www.epochtimes.com/gb/8/4/24/n2092858.htm">瓶盖变椅子  还会发亮</a></li>
-> <li><a href="https://www.epochtimes.com/gb/8/2/20/n2016825.htm">乖乖坐！英退休教师发明“防两脚”座椅</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/15/n11871826.htm">【罗厨寻味】红烧牛尾</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/11/14/n4011149.md#1">作文选登：校园里的声音</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/11/19/n4014011.md#1">作文选登：砂锅鱼头好料理</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/11/22/n4016643.md#1">作文选登：我是铅笔盒</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/12/1/n4023839.md#1">作文选登：我的超级偶像</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/12/5/n4026917.md#1">作文选登：如何做一个好学生</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/12/10/n4030404.md#1">作文选登：种树爱地球</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/12/22/n4040349.md#1">作文选登：温暖</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/12/31/n4046886.md#1">作文选登：珍惜</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/14/1/3/n4049462.md#1">作文选登：天亮了</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/14/1/7/n4052578.md#1">作文选登：学书法</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/15/2/12/n4364933.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11647719.md#1" target="_blank">钟声：“服从命令”与“终身追责”</a></li><li><a href="https://github.com/yywlhi373/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11286029.md#1" target="_blank">祝贺法轮大法日 密西根州再发特殊褒奖令</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/11/n12541883.md#1">突出部之役 巴顿将军的神迹之战</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/17/n12556457.md#1">从《狮子王》经典台词 看天选之王的成长</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564005.md#1">【重播】降低处方药价 川普重申“最惠国价格”</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564519.md#1">【财商天下】对抗神秘“影子金权” 川普动了谁的奶酪</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564688.md#1">【新闻看点】美国再独立战争？川习角力APEC</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561543.md#1">朱利安尼：28州选票数据被送德国西班牙</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12560324.md#1">邮寄选票致胜？布碌崙长岛多位民主党反超夺位</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12560602.md#1">密州韦恩县选举结果再翻转 检票官撤认证</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/18/n12559155.md#1">孙俪晒六岁女儿毛笔字 小花版千字文字体工整</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12561769.md#1">赵树海谈及家庭生活 赞高圆圆是标准儿媳</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12560394.md#1">姜素拉怀孕获公司证实 孩子预计明年4月出生</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/20/n12564311.md#1">吴京恐不能再拍动作戏 关节烂到软骨像杂草</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/19/n12560410.md#1">龙千玉邀杨哲对唱新歌 首被后辈“指正”唱腔</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/18/n12557834.md#1">【美食天堂】4种方法长久保存姜～几个月都新鲜！</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/15/n12550992.md#1">大卖场卤味熟食能买吗？店家不说的真相</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/15/n12550494.md#1">冷藏肉与冷冻肉不一样 购买时要睁大眼睛</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/18/n12557985.md#1">45亿年历史陨石砸破屋顶 印尼男子变大富翁</a></li>
+<li><a href="https://github.com/yywlhi373/djy/blob/master/gb/20/11/17/n12556081.md#1">凡士林不只保湿 有5大妙用 挑选看1点</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yywlhi373/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/15/2/12/n4364933.htm">作文选登：登上玉山</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yywlhi373/djy/blob/master/gb/15/2/12/n4364933.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yywlhi373/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yywlhi373/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yywlhi373/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yywlhi373/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yywlhi373/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
