--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -14,7 +14,7 @@
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565461.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565461.md#1" target="_blank">安徽女大学生被刺杀数十刀 杀人教师获死刑</a><br></h3>11月20日下午，安徽工程大学33岁郭某牛因故意杀害该校女生涵涵......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565076.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/S__2818061-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565076.md#1" target="_blank">五中全会进京被截访 上海访民：维权到底</a><br></h3>上海有多名访民在10月份五中全会期间进京被截返后，有的被拘留，有的......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565131.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2013/01/1010201428232208-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565131.md#1" target="_blank">川普政府拟再把四中企列入中共军企黑名单</a><br></h3>消息人士表示，川普（特朗普）政府准备指定另外4家中企为中共军方拥有......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565296.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/download-42-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565296.md#1" target="_blank">【拍案惊奇】川普为何换防长 拜登谈对中共立场</a><br></h3>11月19日，应该讲一个话题，是历史上发生的，但是对现在的美国乃至......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565296.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/download-42-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565296.md#1" target="_blank">【拍案惊奇】拜登谈对华立场 川普律师反击左媒</a><br></h3>11月19日，应该讲一个话题，是历史上发生的，但是对现在的美国乃至......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565062.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/05/1411010353442663-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565062.md#1" target="_blank">大陆百城楼市库存超5亿平米 连续23月增长</a><br></h3>大陆最新的百城楼市库存报告显示，今年10月份，新建商品住宅库存总量......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565088.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/2011202155302378-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565088.md#1" target="_blank">台美经济对话成果 将展开科技合作协定咨商</a><br></h3>台美经济繁荣伙伴对话今天（11月20日）登场，率团来美参与实体会议......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565175.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565175.md#1" target="_blank">上海浦东医院护士确诊 官方急“封院”</a><br></h3>上海、天津再爆中共病毒（武汉肺炎）本土感染病例。上海一对夫妇染疫后......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
