--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,21 +13,21 @@
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564609.md#1" title="川普律师证实美军没收德国的Scytl服务器""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/470018-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564524.md#1" title="鲍威尔：未来两周内 将选举舞弊证据呈堂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8621-700x420-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://cvusyr3283.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1">拟对出生公民权采取行动 川普政府重启讨论</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565835.md#1">APEC领袖会议登场 张忠谋：愿分享台防疫经验</a><br>
+:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12566092.md#1">拟对出生公民权采取行动 川普政府重启讨论</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565835.md#1">APEC领袖会议登场 张忠谋：愿分享台防疫经验</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565924.md#1">联邦参议员候选人：密歇根应延迟大选认证</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565243.md#1">流浪犬吃饱仍叼碗不放 真实原因令人动容</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565243.md#1">流浪犬吃饱仍叼碗不放 真实原因令人动容</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565534.md#1">美房产商买二手房翻修 发现大量现金速归还</a><br>
 :clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565901.md#1">李怀庆庭审当天 公民记者路过法院被传唤</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562519.md#1">浙江早餐店“翻墙”播境外节目 遭罚款断网</a><br>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561275.md#1">赵立坚粗口骂五眼联盟 再现战狼本色</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563068.md#1">【翻墙必看】川普获压倒性胜利将获证实</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563026.md#1">广州警方殴打外卖小哥 官方解释引网民炮轰</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12562113.md#1">南京警方跨省拘吴景标和凉墨先生 网友吁关注</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12562646.md#1">天津本土病例急增 滨海新区全员检测</a><br>
-<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561355.md#1">拜登阵营丑闻：贿赂内华达原住民 花钱买票</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563148.md#1">大陆多地新增确诊病例 纷纷出台限制令</a><br>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12561830.md#1">台胞控诉福建警方包庇害子嫌犯 要亡党亡国</a><br>
+<a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12563188.md#1">河北一民政局长办公楼坠亡 生前徘徊多次</a><br>
 <br><p align="center"><a href="https://github.com/cvusyr3283/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/16/n12552112.md#1">【独家】在海外为中共牵线的关键人物</a><br>
 <a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/19/n12562260.md#1">鲍威尔：我们即将证明川普获压倒性胜利</a><br>
