--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -13,7 +13,7 @@
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565491.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565491.md#1" target="_blank">大陆人脸识别第一案宣判 原告欲再上诉</a><br></h3>11月20日下午，杭州富阳法院一审宣判，动物世界赔偿原告计人民币1......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565683.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565683.md#1" target="_blank">山东德州前首富受审 开罪官员3天内破产</a><br></h3>11月20日，有“中国鸭王”之称的山东德州前首富张洪波在德州受审......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565601.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/2011020042492371-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565601.md#1" target="_blank">越来越多美国人认为中共应赔偿瘟疫损失</a><br></h3>一份最新的民调显示，有越来越多的美国人认为中共当局应为中共病毒（武......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564577.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/02/chenglong-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564577.md#1" target="_blank">陆媒惊爆：成龙撒了37年的一个弥天大谎</a><br></h3>近日，大陆知名UP主（在视频网站、资源网站等地上传视频的人）悉数成......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564577.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/02/chenglong-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564577.md#1" target="_blank">陆媒惊爆：成龙撒了37年的一个弥天大谎</a><br></h3>近日，大陆知名UP主（在视频网站、资源网站等上传视频的人）悉数成龙......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565606.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565606.md#1" target="_blank">港网台主持杰斯夫妇突被捕 曾募款助留台港人</a><br></h3>11月21日，香港“D100 Radio”电台主持人杰斯(原名：尹......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565185.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/09/cd712edd207f212146ff0cb3dc1b516d-320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565185.md#1" target="_blank">中概股“跟谁学”第三季度净亏损逾9亿</a><br></h3>11月20日，“跟谁学”公布截至2020年9月30日第三季度未经审......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565461.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565461.md#1" target="_blank">安徽女大学生被刺杀数十刀 杀人教师获死刑</a><br></h3>11月20日下午，安徽工程大学33岁郭某牛因故意杀害该校女生涵涵......<br><img align="bottom" src="https://raw.githubusercontent.com/cvusyr3283/www/master/t/ntdtv/time.gif">11月21日</td></tr>
