--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -12,9 +12,9 @@
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565131.md#1" target="_blank">川普政府拟再把四中企列入中共军企黑名单</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12565131.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2013/01/1010201428232208-150x120.jpg" align ="left"></a>消息人士表示，川普（特朗普）政府准备指定另外4家中企为中共军方拥有或控制企业，以遏制美国投资者对这些中企投资。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 2:12 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564746.md#1" target="_blank">鲍威尔：四敌国介入过美国大选制表服务器</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564746.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/09/GettyImages-459271274-150x120.jpg" align ="left"></a>美国总统川普（特朗普）竞选团队律师西德尼?鲍威尔（Sidney Powell）周五（11月20日）接受媒体采访时说，美军在德国截获的Scytl服务器上发现四个敌对国有介入。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 12:58 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564953.md#1" target="_blank">美议员提新法案 禁投资黑名单上中国企业</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564953.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/A4-115-1-150x120.jpg" align ="left"></a>美国方面进一步关紧了中共在美国获得资助的大门。在川普（特朗普）总统此前针对美国投资中国公司问题发布总统令之后，国会议员又制定了新的法案，进一步扩大了美国资金投资中国公司的禁令范围。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 11:30 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564665.md#1" target="_blank">“打倒中共恶魔”联署加速 一个月增10万</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564665.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/145159-150x120.png" align ="left"></a>全球退党服务中心自今年6月份发起有16种语言版本的“打倒中共恶魔”（Eliminate the Demon Chinese Communist Party）倡议书全球征签以来，获得全球各族裔民众广泛响应，不到半年时间，截止到11月19日，全球有超过23万人联署。尤其是进入10月份以来，联署大潮更是汹涌澎湃，人数以加速度迅猛增加，一个月内增加了超过10万个签名.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:33 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564665.md#1" target="_blank">“打倒中共恶魔”连署加速 一个月增10万</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564665.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/145159-150x120.png" align ="left"></a>全球退党服务中心自今年6月份发起有16种语言版本的“打倒中共恶魔”（Eliminate the Demon Chinese Communist Party）倡议书全球征签以来，获得全球各族裔民众广泛响应，不到半年时间，截止到11月19日，全球有超过23万人连署。尤其是进入10月份以来，连署大潮更是汹涌澎湃，人数以加速度迅猛增加，一个月内增加了超过10万个签名.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:33 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/24/n12499541.md#1" target="_blank">【思想领袖】吉尼斯：如何应对中共无声入侵</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/10/24/n12499541.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/download-40-150x120.jpg" align ="left"></a>去年，一名藏族加拿大学生在当选大学学生会主席后，收到了大量的恐吓信、骚扰和死亡威胁。2018年，一位竞选当地公职的官员收到一封信，邀请他代表当地社区访问中国，与一座中国城市建立“友谊”。 这些案件只是中共扩大对外影响行动的冰山一角。本期节目，我们将与加内特·吉尼斯（Garnett Genuis）进行座谈，他是加拿大影子内阁国际发展与人权部部长，也是“对华政策.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:30 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" target="_blank">麦肯娜尼：为了“宪法程序” 川普不应让步</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-150x120.jpg" align ="left"></a>白宫新闻秘书凯莉?麦肯娜尼（Kayleigh McEnany）周五（11月20日）就2020总统大选结果表示，因为目前尚未解决的法律诉讼挑战，以及大选“宪法程序”仍在进行之中，唐纳德?川普（特朗普）总统不应该作出退让。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:08 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" target="_blank">麦肯纳尼：为了“宪法程序” 川普不应让步</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/21/n12564900.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1R17CJ-150x120.jpg" align ="left"></a>白宫新闻秘书凯莉?麦肯纳尼（Kayleigh McEnany）周五（11月20日）就2020总统大选结果表示，因为目前尚未解决的法律诉讼挑战，以及大选“宪法程序”仍在进行之中，唐纳德?川普（特朗普）总统不应该作出退让。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 10:08 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564658.md#1" target="_blank">沈舟：美太空军星链计划应对中共威胁</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/20/n12564658.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/200928-N-NO204-0001-150x120.jpg" align ="left"></a>11月19日，美国印太司令部透露了美国太空军的星链计划，明确指向了中共的威胁。美军正在部署一个庞大的太空卫星网链（Starlink broadband network），令中共试图破坏美国卫星的做法成为徒劳。
 
 卫星网链项目，由美国私营企业SpaceX公司提出，公司的老板也是特斯拉电动汽车公司的老板，伊隆·马斯克（Elon Musk）。SpaceX公司还.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月21日 9:06 AM							</td></tr>
