--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -27,24 +27,8 @@
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547632.md#1" target="_blank">周晓辉：川普启动雷霆之击 北京忧心之事将至</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547632.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/511234519-600x400-150x120.jpg" align ="left"></a>在美国大选舞弊浮现越来越多的证据，川普（特朗普）选情看好，美国国务卿蓬佩奥对川普选举前景表示乐观，并在里根研究所的演讲中再次发出强硬灭共声音后，美国当地时间11月12日，白宫官网发布了川普总统“关于继续维持大规模杀伤性武器扩散国家紧急状态”的声明以及“致众议院议长和参议院主席的信”，在笔者看来，这是川普政府启动针对中共.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月14日 4:49 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547290.md#1" target="_blank">【名家专栏】计算每张合法选票 拯救美利坚</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547290.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Getty-Mail-In-Ballot-150x120.jpg" align ="left"></a>2020年美国总统大选无论如何是史无前例的，在很多方面都是受到媒体、乔治?索罗斯（大财团）、民主党以及来自中国、俄罗斯和伊朗的大量外国势力的胁迫和无情攻击。我们共和国的存在岌岌可危。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月14日 4:18 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547825.md#1" target="_blank">王赫：中共为何突然祝贺拜登？</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547825.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-156444458-150x120.jpg" align ="left"></a>11月13日下午，中共外交部发言人汪文斌在例行记者会，突然“向拜登先生和哈里斯女士表示祝贺”。这是口风再转，还是故弄玄虚？中共究竟要释放什么信号？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月14日 3:52 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/15/n12550640.md#1" target="_blank">林泉：让川普再做四年总统</a><br></h3>难遇战神川普公，四年总统业绩浓。
-中东乱象初平抑，世界公敌正锁容。
-自古英雄多磨难，从来君子少认同。
-美国命运悬一线，勿错良机让腐虫。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月15日 4:54 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/15/n12550630.md#1" target="_blank">苦胆：大选如镜</a><br></h3>流年不利百事凶，
-美国选情硝烟浓。
-投票软件制假票，
-舞弊大案及顶峰。
-
-拜登自报已胜选，
-假票堆出假总统。
-盟邦首脑竞致贺，
-大选如镜照尊容。
-
-镜面映现正邪战，
-暗黑势力正操控。
-此镜折射戏外戏，
-幕后魔影是中共。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月15日 4:47 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547786.md#1" target="_blank">杨威：中共外交部忽祝贺拜登 风暴来临？</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547786.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/000_1JO1R0-600x400-150x120.jpg" align ="left"></a>11月13日，中共外交部记者会上，中共却忽然主动祝贺拜登，揭示了美中对抗的新一轮风暴正在来临。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月14日 3:28 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547165.md#1" target="_blank">【名家专栏】2020大选须解答的严重问题</a><br></h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/13/n12547165.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/balltots-in-nevada-1200x963-150x120.jpg" align ="left"></a>在宪政共和国，我们政府的权力来自被管理者的授权。美国人民只在每四年的选举日做出一次这样的表态。如果他们对选举的公正性有合理的疑问（有充分的理由严重关注2020年选举的公正性），在尚未获得他们同意的情况下，那么新政府的合法性仍然是一个问题，直到这些问题得到满意的答案。而且没有理由不回答这些问题。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月14日 3:15 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/cvusyr3283/djy/blob/master/gb/20/11/15/n12550603.md#1" target="_blank">宇明：大选三部曲</a><br></h3>美国大选精彩纷呈，
 左派票仓渐渐翻红，
 一夜过后风向大转，
