--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -5,7 +5,7 @@
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630705.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2018/06/b72ee49febef6a381d2d964412fef3ff-320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630705.md#1" target="_blank">中共缺席美中安全会 美：不履行协议又一例证</a><br></h3>美国军方周三批评中共未出席原定本周举行的一个高级别视频会议。美国印......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630509.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/06/24e5ba52025b64fe8b0dae303e61077f-320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630509.md#1" target="_blank">报告：中共在瑞士搞统战 绵密程度超乎想像</a><br></h3>根据一位瑞士学者的研究，中国（中共）在瑞士的统战及影响力操作，绵密......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月19日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630357.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630357.md#1" target="_blank">被查的哈尔滨前司法局长向生元还有哪些恶行</a><br></h3>11月6日消息，哈尔滨市司法局前党委书记、局长向生元涉嫌严重“违纪......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月18日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630478.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2015/09/1509041611272003-320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630478.md#1" target="_blank">代防长令暂停与拜登团队过渡会议？国防部回应</a><br></h3>美国在线网站Axios周五（12月18日）报导，代理国防部长克里斯......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月18日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630478.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2015/09/1509041611272003-320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630478.md#1" target="_blank">代防长令暂停与拜登团队过渡？国防部回应</a><br></h3>美国在线网站Axios周五（12月18日）报导，代理国防部长克里斯......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月18日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629949.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/12/11-27-320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629949.md#1" target="_blank">电棍电嘴 酷刑致残 法轮功学员黄柱峰又遭绑架</a><br></h3>12月12日，茂名市法轮功学员黄柱峰和妻子谢月珍及15岁的小孩被绑......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月18日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630222.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/12/07c1449a62e5d3c0aa4d54a1619c034a-600x400-1-320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630222.md#1" target="_blank">美商务部将中芯国际等数十中企列入黑名单</a><br></h3>出于国家安全考虑，美国商务部周五（12月18日）宣布把数十家中企列......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月18日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629885.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/12/1cec5a5e6c563d843159a9e6814eec51-320x200.jpg" align ="left"></a><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629885.md#1" target="_blank">成都再添中风险区 密接者经三次检测才确诊</a><br></h3>四川成都中共肺炎疫情仍然严重。最新消息显示，成都郫都区三道堰镇八步......<br><img align="bottom" src="https://raw.githubusercontent.com/onivku3167/www/master/t/ntdtv/time.gif">12月18日</td></tr>
