--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -4,21 +4,21 @@
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630805.md#1" title="【一线采访】成都遮掩疫情 百姓批无知情权""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/IMG_5206-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630739.md#1" title="替中共监视视频会议 Zoom中国雇员被诉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/08/GettyImages-803354590-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630731.md#1" title="川普吁麦康奈尔和GOP参议员须强硬反窃选""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/03/000_1PR7WX-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629751.md#1" title="【大选更新12·18】“请总统下令戒严拯救国家”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/145771-320x200.png">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630320.md#1" title="【新闻大家谈】巨兽握免死牌？川普誓反击""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/fc3609c2ada90f8313560ad88d130768-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630086.md#1" title="美国38州对谷歌提反垄断诉讼""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-1154955595-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630222.md#1" title="美商务部将中芯国际等数十中企列入黑名单""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/07c1449a62e5d3c0aa4d54a1619c034a-600x400-1-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629751.md#1" title="【大选更新12·18】乔州将检查邮寄选票签名""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229645488-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629629.md#1" title="选举人团对决 在国会联席会议能翻盘吗？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/A4-4-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628408.md#1" title="美核安全局网络遭APT黑客入侵 影响6机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/12/812101600362037-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629029.md#1" title="当选参议员有意挑战选举人团 川普回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229555811-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629086.md#1" title="大陆留学生：全球华人都应敬佩法轮功""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/IMG_7763-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/onivku3167/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://onivku3167.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630544.md#1">【直播】多米尼证人指控其CEO作证时撒谎</a><br>
-:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629475.md#1">亚利桑那马县就选举诉讼举行会议</a><br>
-:clock8: <em>35分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630801.md#1">川普律师：选举未结束 国会需作出选择</a><br>
-:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630827.md#1">SolarWinds泄密续发酵 亚利桑那县政府被骇</a><br>
-:clock8: <em>44分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630805.md#1">【一线采访】成都遮掩疫情 百姓批无知情权</a><br>
-:clock8: <em>55分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630802.md#1">密州证人：多米尼CEO证词诸多疑问未解</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630614.md#1">川普政府赢最高院诉讼 人口普查不算非法移民</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630544.md#1">【直播】多米尼证人指控其CEO作证时撒谎</a><br>
+:clock8: <em>27分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12629475.md#1">亚利桑那马县就选举诉讼举行会议</a><br>
+:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630801.md#1">川普律师：选举未结束 国会需作出选择</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630827.md#1">SolarWinds泄密续发酵 亚利桑那县政府被骇</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/18/n12630805.md#1">【一线采访】成都遮掩疫情 百姓批无知情权</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/onivku3167/djy/blob/master/gb/20/12/17/n12628632.md#1">中共称接回7万人 网友打脸：天价机票回国难</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,578,279 人
+!共 369,578,426 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
