--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628408.md#1" title="美核安全局网络遭APT黑客入侵 影响6机构""><img width="73" src="https://i.epochtimes.com/assets/uploads/2008/12/812101600362037-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629029.md#1" title="当选参议员有意挑战选举人团 川普回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229555811-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vsrhmu3414.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">读纳瓦罗分析民主党2020窃选策略：“千伤致命”</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631165.md#1">蓬佩奥：美成功研发疫苗 中共仍在散布假信息</a><br>
-:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/8/n12602692.md#1">美国海军到底多强 五个方面即可了解</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631111.md#1">委内瑞拉选举舞弊 美制裁选举系统公司及高管</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/19/n12631228.md#1">【横河直播】司法立法途穷 川普如何破阵？</a><br>
+:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630942.md#1">读纳瓦罗分析民主党2020窃选策略：“千伤致命”</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631165.md#1">蓬佩奥：美成功研发疫苗 中共仍在散布假信息</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/8/n12602692.md#1">美国海军到底多强 五个方面即可了解</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631111.md#1">委内瑞拉选举舞弊 美制裁选举系统公司及高管</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12627138.md#1">川普宣布延长紧急状态 以应对国家安全威胁</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629245.md#1">【翻墙必看】首席大法官罗伯茨被曝丑闻</a><br>
@@ -42,21 +42,21 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 369,581,015 人
+!共 369,581,902 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630222.md#1">美商务部将中芯国际等数十中企列入黑名单</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630984.md#1">中国被曝年前给五千万人打疫苗 疫苗合格吗？</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630729.md#1">杨威：习近平授军衔为何没有笑容？</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630739.md#1">替中共监视视频会议 Zoom中国雇员被诉</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630984.md#1">中国被曝年前给五千万人打疫苗 疫苗合格吗？</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630320.md#1">【新闻大家谈】巨兽握免死牌？川普誓反击</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630729.md#1">杨威：习近平授军衔为何没有笑容？</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630805.md#1">【一线采访】成都遮掩疫情 百姓批无知情权</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631057.md#1">钟原：李克强谈2021年经济工作透实情</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/5/n12598306.md#1">【特稿】拨乱反正 宪法赋予总统特别权力</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628549.md#1">【新闻看点】国会阻击战胜算？川普最后抉择</a><br>
+<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12631149.md#1">传亨特曾问会计：我进监狱后收入是多少？</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/17/n12628468.md#1">撑警李偲嫣染疫猝死 网络沸腾建制派一片沉寂</a><br>
-<a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630320.md#1">【新闻大家谈】巨兽握免死牌？川普誓反击</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12629232.md#1">白宫网站请愿：请总统下令戒严拯救国家</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/18/n12630669.md#1">【役情最前线】中共是真正威胁 美国务院连发十推文</a><br>
 <a href="https://github.com/vsrhmu3414/djy/blob/master/gb/20/12/16/n12625486.md#1">【时事军事】钓鱼岛冲突再起 日本暗示或开打</a><br>
